# ros_assignments

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
devel/: .catkin  .rosinstall  setup.sh
devel/include/ros_assignments/: InputService.h  InputServiceRequest.h  InputServiceResponse.h  ServiceCall.h  ServiceCallResponse.h  StateService.h  StateServiceRequest.h  StateServiceResponse.h
devel/lib/pkgconfig/: ros_assignments.pc
devel/lib/python2.7/dist-packages/ros_assignments/srv/: _InputService.py  _StateService.py  __init__.py
devel/lib/ros_assignments/: averager  constant_changer  constant_generator  square_generator  state_machine  state_machine_input  state_machine_querry  triangle_generator
devel/share/common-lisp/ros/ros_assignments/srv/: InputService.lisp  StateService.lisp  _package.lisp  _package_InputService.lisp  _package_StateService.lisp  ros_assignments-srv.asd
devel/share/ros_assignments/cmake/: ros_assignments-msg-extras.cmake  ros_assignments-msg-paths.cmake  ros_assignmentsConfig.cmake
include/ros_assignments/: square_generator.hpp  square_generator_node.hpp  triangle_generator.hpp  triangle_generator_node.hpp
install/include/ros_assignments/: ServiceCallRequest.h
install/lib/pkgconfig/: ros_assignments.pc
install/lib/python2.7/dist-packages/ros_assignments/srv/: _ServiceCall.py  __init__.py
install/share/common-lisp/ros/ros_assignments/srv/: ServiceCall.lisp  _package.lisp  _package_ServiceCall.lisp  ros_assignments-srv.asd
install/share/ros_assignments/cmake/: ros_assignmentsConfig.cmake
launch/: frames.launch  test.launch  test.launch~
src/: .triangle_generator.cpp.swp
src/ros_assignments/: CMakeLists.txt  averager.cpp  constant_changer.cpp  square_generator.cpp  square_generator.cpp~  state_machine_input.cpp  state_machine_querry.cpp  transform_client.cpp  transform_listener.cpp  triangle_generator.cpp
src/ros_assignments/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
src/ros_assignments/.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
src/ros_assignments/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
src/ros_assignments/src/ros_assignments/: constant_generator.cpp  square_generator.cpp  state_machine.cpp  state_machine_input.cpp
src/ros_assignments/src/ros_assignments/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
srv/: ServiceCall.srv  StateService.srv~  TransformService.srv
test/ros_assignments/: square_generator.cpp  triangle_generator.cpp
